# parameterized-ontic-structural-realism-project

./: .gitignore  AGENT_BRIEFING.md  IMPLEMENTATION_NOTES.md  OPERATING_MANUAL.md  README.md  SUPPLEMENTARY_BRIEFING.md  demo.py  pyproject.toml  sm_dependency_graph.json
consciousness/: white_accumulation_appendix_f_formal_structure.md  white_accumulation_chatgpt.txt  white_accumulation_collected_papers.md  white_accumulation_conversation_export.md  white_accumulation_handshake_humanistic_2026-04-10.md  white_accumulation_handshake_prose_2026-04-10.md  white_accumulation_handshake_whitepaper_2026-04-10.md  white_accumulation_raw_transcript.md  white_accumulation_simulation_spec.md  white_accumulation_summary_for_heather_2026-04-10.md  white_accumulation_summary_for_toni.md  white_accumulation_whitepaper.md  white_accumulation_whitepaper_prose.md
deep-research/: README.md
notebookLLM-Advanced-Solid-state/: 00-root__INDEX.txt  00-root__PROJECT_BRIEFING.txt  00-root__state_of_project_4_6_26.txt  01-v1__sm_dependency_graph.txt  02-research__time-symmetry-debt__AGENT_BRIEFING.txt  03-reports__agent-1-nonabelian-absorber.txt  03-reports__agent-2-cosmological-propagator.txt  03-reports__agent-3-cp-violation.txt  04-v2__PARAMETER_INVENTORY.txt  04-v2__V2_NOTE.txt  04-v2__sm_dependency_graph_v2.txt  05-creating-agent-notes__what_compaction_will_lose.txt  05-creating-agent-notes__where_the_leverage_is.txt
posr/: __init__.py  diff.py  graph.py  registry.py  schema.py
posr/templates/: gr.py  (+2 more)
tests/: __init__.py  test_diff.py  test_graph.py  test_schema.py  test_templates.py
(+10 files in other folders)
